# home-plant

./: .gitmodules  README.md  beaglebone-adapter.kicad_pcb  giess-mess.brd  giess-mess.net  giess-mess.sch  giess-schalt.brd  giess-schalt.net  giess-schalt.sch  meas-capacity.kicad_pcb  meas-capacity.pro  meas-capacity.sch  meas-tensio.kicad_pcb  meas-tensio.pro  meas-tensio.sch  switch.kicad_pcb  switch.sch
common/can_message/: content_plant.h
firmware/meas-tensio/: CMakeLists.txt  acquire.cpp  acquire.h  can_config.h  meas.cpp  serial.cpp
firmware/utils/: clock.cpp  clock.h  settings.cpp  settings.h
hardware/: beaglebone-adapter.sch  meas-capacity.kicad_pcb  meas-capacity.pro  meas-capacity.sch  meas-tensio.kicad_pcb  meas-tensio.sch  switch-12V.kicad_pcb  switch-12V.sch  switch-230V.sch
hardware/legacy/: avr-controller.sch  measure.kicad_pcb
legacy/: avr-controller.brd  avr-controller.kicad_pcb  measure-legacy.lib  measure.kicad_pcb
